@@ -1126,7 +1126,7 @@ right form by using the header files.  You must include them.
 
 For additional control, @file{@var{R_HOME}/src/gnuwin32/Makefile} contains
 additional make targets corresponding to various options to @code{R
-CMD INSTALL}.  These assume that package @code{foo}source code has
+CMD INSTALL}.  These assume that package @code{foo} source code has
 been installed in directory @file{@var{R_HOME}/src/library/foo}. Then
 @code{make pkg-foo} is similar to @code{R CMD INSTALL foo} (but the
 latter would require @file{@var{R_HOME}/src/library} to be the current
@@ -1170,8 +1170,8 @@ Some variables that may be used include:
 where the package should be installed.
 @end itemize
 For a complete list of variables, see the @file{M*} files in
-@file{@var{R_HOME}/src/gnuwin32}.  The @code{PKG_*} files are those typically
-included in @file{Makevars} files.
+@file{@var{R_HOME}/src/gnuwin32}.  The @code{PKG_*} flags are those
+typically included in @file{Makevars} files.
 
 @node Customizing compilation under Unix,  , Customising compilation in Windows, Installing packages
 @subsection Customizing compilation under Unix
@@ -2915,7 +2915,7 @@ options.
 
 It seems that @samp{gcc 3.4.x} on @samp{ix86} Linux defeats attempts by
 the LAPACK code to avoid computations entirely in extended-precision
-registers, so file @file{src/modules/lapack/dlamc.f} may need to
+registers, so file @file{src/modules/lapack/dlamc.f} may need to be
 compiled without optimization.  If configure detects @acronym{GNU}
 Fortran it adds flag @option{-ffloat-store} which suffices, but it is
 possible that @file{src/modules/lapack/Makefile} will need to be edited
