@@ -17,7 +17,7 @@ Sweave <- function(file, driver=RweaveLatex(),
 
     text <- SweaveReadFile(file, syntax)
     syntax <- attr(text, "syntax")
-        
+
     mode <- "doc"
     chunknr <- 0
     chunk <- NULL
@@ -68,7 +68,7 @@ Sweave <- function(file, driver=RweaveLatex(),
                             domain = NA)
                 line <- namedchunks[[chunkref]]
             }
-            
+
             if(is.null(chunk))
                 chunk <- line
             else
@@ -127,11 +127,11 @@ SweaveReadFile <- function(file, syntax)
     ## </FIXME>
 
     pos <- grep(syntax$syntaxname, text)
-    
+
     if(length(pos)>1){
         warning(gettextf("more than one syntax specification found, using the first one"), domain = NA)
     }
-    if(length(pos)>0){    
+    if(length(pos)>0){
         sname <- sub(syntax$syntaxname, "\\1", text[pos[1]])
         syntax <- get(sname, mode = "list")
         if(class(syntax) != "SweaveSyntax")
@@ -154,7 +154,7 @@ SweaveReadFile <- function(file, syntax)
                  domain = NA)
             }
             itext <- SweaveReadFile(c(ifile, file), syntax)
-        
+
             if(pos==1)
                 text <- c(itext, text[-pos])
             else if(pos==length(text))
@@ -167,8 +167,8 @@ SweaveReadFile <- function(file, syntax)
     attr(text, "syntax") <- syntax
     text
 }
-   
-    
+
+
 
 ###**********************************************************
 
@@ -338,7 +338,7 @@ RweaveLatexSetup <-
     output <- file(output, open="w+")
 
     if(stylepath){
-        styfile <- file.path(R.home(),"share","texmf","Sweave")
+        styfile <- file.path(R.home("share"), "texmf", "Sweave")
         if(.Platform$OS.type == "windows")
             styfile <- gsub("\\\\", "/", styfile)
         if(any(grep(" ", styfile)))
@@ -746,7 +746,7 @@ RtangleRuncode <-  function(object, chunk, options)
 
     if(!options$eval)
         chunk <- paste("##", chunk)
-    
+
     cat(chunk,"\n", file=chunkout, append=TRUE, sep="\n")
 
     if(is.null(options$label) & options$split)
