@@ -26,10 +26,10 @@ function(file, topic)
     file.append(con, file)
     cat("\\end{document}\n", file = con, append = TRUE)
     cmd <- paste('"',
-                 paste(R.home(), "bin", "helpPRINT", sep="/"),
+                 paste(R.home("bin"), "helpPRINT", sep="/"),
                  '"', sep="")
     texpath <- chartr("\\", "/",
-                      file.path(R.home(), "share", "texmf"))
+                      file.path(R.home("share"), "texmf"))
     system(paste(cmd, FILE, topic, texpath), wait = FALSE)
     return(invisible())
 }
