@@ -1,9 +1,9 @@
 help.start <- function(update = TRUE, gui = "irrelevant",
                        browser = getOption("browser"))
 {
-    a <- file.path(R.home(), "doc/html/rwin.html")
+    a <- file.path(R.home("doc"), "html", "rwin.html")
     if(!file.exists(a))
-        a <- file.path(R.home(), "doc/html/rwin.htm")
+        a <- file.path(R.home("doc"), "html", "rwin.htm")
     if(!file.exists(a))
         stop("unable to find the html help")
     if(update) {
